tests/NormalTests/paczka1/small_fuzzy/67454661.err
Error in line 5: RhHI S886 7,99
Error in line 3: 1CDNYF S886 61,7
Error in line 7: 1CDNYF S296 39,4
Error in line 1: RhHI S296 50,1
